@@ -1,6 +1,7 @@
 dev:
    * remove support for python versions < 3.5
    * support writing of stack header
+   * add support for '{trc_num}' in the index which inserts the number of the trace
 v0.4.1:
    * allow to set libver when creating a new file (default is now 'earliest' for best backwards compatibility)
 v0.4.0:
